fixed jumping scrollbar on route change

--- a/src/renderer/styles/_globals.scss
+++ b/src/renderer/styles/_globals.scss
@@ -47,6 +47,10 @@ body {
         width: 100%;
     }
 
+    .window-height {
+        height: 100vh;
+    }
+
     .scrollable-container {
         box-sizing: border-box;
         overflow-y: scroll;
